Configured integration tests to run in parallel.